# async-sql-fastapi

./: justfile  pyproject.toml
sqlalchemy_tutorial/: db.py  main.py  models.py
